kube-prom-ingress/dev/pmm-server-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: pmm-server
  labels:
    app: pmm-server
  namespace: monitoring
spec:
  tls:
  - hosts:
    - "pmm-server.devdearxuany.com"
    secretName: devdearxuany-com
  rules:
  - host: "pmm-server.devdearxuany.com"
    http:
      paths:
      - backend:
          serviceName: pmm-server
          servicePort: 80
        path: /
