kube-prom-ingress/dev/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx    
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: prometheus-k8s
  labels:
    app: prometheus-k8s
  namespace: monitoring
spec:
  tls:
  - hosts:
    - prometheus.devdearxuany.com
    secretName: devdearxuany-com
  rules:
  - host: "prometheus.devdearxuany.com"
    http:
      paths:
      - backend:
          serviceName: prometheus-k8s
          servicePort: 9090
        path: /
